welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:39: error: expected class or object definition
def growFlowers2() {
^FlowerCase:67: error: expected class or object definition
def croix(c:Color){
^FlowerCase:84: error: Unmatched closing brace '}' ignored here
}
^